--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
     <script id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/47932673.js"></script>
     <!-- End of HubSpot Embed Code -->
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
