--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Bienvenido a KRISMA</h1>
-        <p>Cascos de moto con tecnología de punta y seguridad avanzada</p>
+        <p>Innovación y seguridad para un viaje sin límites</p>
     </header>
 
     <section id="features">
