--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
         <h2>Características de Nuestros Cascos</h2>
         <p>✨ Descubre los cascos KRISMA, donde la tecnología y la seguridad se fusionan para ofrecerte una experiencia de conducción inigualable. 🏍️</p>
         <ul>
-            <li>**Realidad mixta integrada** 🕶️</li>
-            <li>**Dashcam delantera y trasera en 2K** 📸</li>
-            <li>**Bluetooth, micrófono, altavoces y tecnología Mesh** 🔗 compatibles con Android y iOS 📱</li>
-            <li>**Sistema de emergencia SecurityKM** 🚨</li>
-            <li>**Combinación de fibra de carbono y Kevlar** 🦾 para máxima protección y ligereza</li>
+            <li><h3>Realidad mixta integrada</h3> 🕶️</li>
+            <li><h3>Dashcam delantera y trasera en 2K</h3> 📸</li>
+            <li><h3>Bluetooth, micrófono, altavoces y tecnología Mesh</h3> 🔗 compatibles con Android y iOS 📱</li>
+            <li><h3>Sistema de emergencia SecurityKM</h3> 🚨</li>
+            <li><h3>Combinación de fibra de carbono y Kevlar</h3> 🦾 para máxima protección y ligereza</li>
         </ul>
     </section>
 
     <section id="shipping">
         <h2>Envíos</h2>
-        <p>📦 **Envíos gratuitos para toda España**. 🚚 **20€** para el resto de Europa. 🌍 Envíos a otros países con costo variable según la ubicación.</p>
+        <p>📦 <h3>Envíos gratuitos para toda España</h3>. 🚚 **20€** para el resto de Europa. 🌍 Envíos a otros países con costo variable según la ubicación.</p>
     </section>
 
     <section id="warranty">
         <h2>Garantía y Devoluciones</h2>
-        <p>🛡️ **Garantía de 2 años** en todos nuestros cascos. Política de **devoluciones sencillas de 30 días**. ¡Compra con confianza! 😊</p>
+        <p>🛡️ <h3>Garantía de 2 años</h3> en todos nuestros cascos. Política de **devoluciones sencillas de 30 días**. ¡Compra con confianza! 😊</p>
     </section>
 
     <section id="contact">
         <h2>Contacto</h2>
-        <p>📞 **Llámanos** al +34 632 987 654</p>
-        <p>💬 **WhatsApp**: +34 632 987 765</p>
-        <p>✉️ **Email**: <a href="mailto:soporte@krisma.com">soporte@krisma.com</a></p>
+        <p>📞 <h3>Llámanos</h3> al +34 632 987 654</p>
+        <p>💬 <h3>WhatsApp</h3>: +34 632 987 765</p>
+        <p>✉️ <h3>Email</h3>: <a href="mailto:soporte@krisma.com">soporte@krisma.com</a></p>
     </section>
 
     <!-- Integración de HubSpot -->
