--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
         <h2>Características de Nuestros Cascos</h2>
         <p>✨ Descubre los cascos KRISMA, donde la tecnología y la seguridad se fusionan para ofrecerte una experiencia de conducción inigualable. 🏍️</p>
         <ul>
-            <li><h3>Realidad mixta integrada</h3> 🕶️</li>
-            <li><h3>Dashcam delantera y trasera en 2K</h3> 📸</li>
-            <li><h3>Bluetooth, micrófono, altavoces y tecnología Mesh</h3> 🔗 compatibles con Android y iOS 📱</li>
-            <li><h3>Sistema de emergencia SecurityKM</h3> 🚨</li>
-            <li><h3>Combinación de fibra de carbono y Kevlar</h3> 🦾 para máxima protección y ligereza</li>
+            <li><b>Realidad mixta integrada</b> 🕶️</li>
+            <li><b>Dashcam delantera y trasera en 2K</b> 📸</li>
+            <li><b>Bluetooth, micrófono, altavoces y tecnología Mesh</b> 🔗 compatibles con Android y iOS 📱</li>
+            <li><b>Sistema de emergencia SecurityKM</b> 🚨</li>
+            <li><b>Combinación de fibra de carbono y Kevlar</b> 🦾 para máxima protección y ligereza</li>
         </ul>
     </section>
 
     <section id="shipping">
         <h2>Envíos</h2>
-        <p>📦 <h3>Envíos gratuitos para toda España</h3>. 🚚 **20€** para el resto de Europa. 🌍 Envíos a otros países con costo variable según la ubicación.</p>
+        <p>📦 <b>Envíos gratuitos para toda España</b>. 🚚 20€ para el resto de Europa. 🌍 Envíos a otros países con costo variable según la ubicación.</p>
     </section>
 
     <section id="warranty">
         <h2>Garantía y Devoluciones</h2>
-        <p>🛡️ <h3>Garantía de 2 años</h3> en todos nuestros cascos. Política de **devoluciones sencillas de 30 días**. ¡Compra con confianza! 😊</p>
+        <p>🛡️ <b>Garantía de 2 años</b> en todos nuestros cascos. Política de <b>devoluciones sencillas de 30 días</b>. ¡Compra con confianza! 😊</p>
     </section>
 
     <section id="contact">
         <h2>Contacto</h2>
-        <p>📞 <h3>Llámanos</h3> al +34 632 987 654</p>
-        <p>💬 <h3>WhatsApp</h3>: +34 632 987 765</p>
-        <p>✉️ <h3>Email</h3>: <a href="mailto:soporte@krisma.com">soporte@krisma.com</a></p>
+        <p>📞 <b>Llámanos</b> al +34 632 987 654</p>
+        <p>💬 <b>WhatsApp</b>: +34 632 987 765</p>
+        <p>✉️ <b>Email</b>: <a href="mailto:soporte@krisma.com">soporte@krisma.com</a></p>
     </section>
 
     <!-- Integración de HubSpot -->
