--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         </ul>
     </section>
 
+    <section>
+        <div class="carousel-container">
+            <div class="carousel">
+                <div class="carousel-item"><img src="assets/image1.webp" alt="Imagen 1"></div>
+                <div class="carousel-item"><img src="assets/image2.webp" alt="Imagen 2"></div>
+                <div class="carousel-item"><img src="assets/image3.webp" alt="Imagen 3"></div>
+                <div class="carousel-item"><img src="assets/image4.webp" alt="Imagen 4"></div>
+            </div>
+            <button class="prev-btn">&#10094;</button>
+            <button class="next-btn">&#10095;</button>
+        </div>
+    </section>
+
     <section id="shipping">
         <h2>Envíos</h2>
         <p>📦 <b>Envíos gratuitos para toda España</b>. 🚚 20€ para el resto de Europa. 🌍 Envíos a otros países con costo variable según la ubicación.</p>
@@ -47,5 +60,6 @@
     <!-- End of HubSpot Embed Code -->
 
     <script src="js/app.js"></script>
+    <script src="js/carousel.js"></script>
 </body>
 </html>
